src/assets/scss/theme/sections/_pricing.scss
.pricing {

	&.has-bg-color {
		position: relative;
		background-color: transparent;
		z-index: auto;

		&::before {
			content: '';
			position: absolute;
			bottom: 0;
			left: 50%;
			width: 300%;
			height: 240px;
			transform: translateX(-50%);
			background: get-color(dark, 1);
			z-index: -3;
		}
	}

	.tiles-item-inner {
		background: get-color(light, 1);
	}

	.tiles-item {
        // Illustration fix
        z-index: 1;

		&.illustration-element-07 {
			z-index: 0;
		}
	}

	.form-switch {

		input:checked {

			+ .form-switch-icon {
				background: get-color(secondary, 1);
			}
		}
	}

	&-more-info {
		margin-top: 60px;
		color: #919EB7 !important;
		font-size: 15px;
		text-decoration: none !important;
		transition: all .15s ease-out;

		&:hover {
			color: #E7EBF6 !important;
		}
	}
}

.pricing-item-header {
	@include divider(after);
}

.pricing-item-header-title-secondary {
	color: color(base);
}

.pricing-item-header-subline {
	display: flex;
	justify-content: space-between;
}

.pricing-price {
	color: #5FFAD0;
	font-size: 36px;
}

ul.pricing-item-features-list {
	@include divider(after);

	li {
		justify-content: space-between;
		margin-bottom: 0;
		padding: 14px 0;
		@include divider(before);

		&::after {
			content: '';
			display: block;
			width: 16px;
			height: 12px;
			margin-left: 12px;
			background-image: inline-svg('<svg width="16" height="12" xmlns="http://www.w3.org/2000/svg"><path d="M1 5h14v2H1z" fill="' + rgba( get-color(dark, 3), .64) + '" fill-rule="nonzero"/></svg>');
			background-repeat: no-repeat;
		}

		&.is-checked {

			&::after {
				background-image: inline-svg('<svg width="16" height="12" xmlns="http://www.w3.org/2000/svg"><path d="M5.6 6.4L1.6 4 0 5.6 5.6 12 16 1.6 14.4 0z" fill="' + get-color(alert, success) + '" fill-rule="nonzero"/></svg>');
			}
		}
	}
}

@include media( '>medium' ) {

	.pricing {

		&.has-bg-color {

			&::before {
				height: 200px;
			}
		}
    }
}

@include media( '>1145px' ) { // 1145px may need to be adjusted if pricing items width or outer padding change
	.pricing {

		.tiles-wrap {
			padding-bottom: 100px;
		}

		.tiles-item {
			&:nth-child(3n+1) {
				top: 50px;
			}

			&:nth-child(3n+3) {
				top: 100px;
			}
		}
	}
}

